# pagepilot

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
node/: .npmignore  README.md  package.json  pagepilot-cache.json  test-lazy.ts  tsconfig.json
node/src/: PagePilot.ts  index.ts
node/src/ai/: AnthropicProvider.ts  GeminiProvider.ts  OpenAIProvider.ts  PortkeyProvider.ts  ProviderFactory.ts  docs.ts  prompts.ts  types.ts
node/src/cache/: CacheManager.ts
node/src/core/: Orchestrator.ts  PagePilot.ts
node/src/utils/: accessibility.ts
node/tests/ai/: OpenAIProvider.test.ts  PortkeyProvider.test.ts
node/tests/e2e/: ComparePrices.test.ts  LiveFlipkart.test.ts  LiveGoogle.test.ts  LiveLocal.test.ts
node/tests/fixtures/: simple_page.html
python/: pyproject.toml
python/pagepilot/: __init__.py  healer.py
