[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pagepilot"
version = "0.1.0"
authors = [
  { name="Author Name", email="author@example.com" },
]
description = "Self-Healing Playwright Automation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "openai"
]

[project.urls]
"Homepage" = "https://github.com/example/pagepilot"
